# kanban-task-management-app

./: .gitignore  README.md
.github/workflows/: server_deploy_dev.yml
client/: .eslintrc.json  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
client/src/app/: ApolloWrapper.tsx  BoardDisplay.tsx  BoardView.tsx  Main.tsx  Navbar.tsx  View.tsx  (+5 more)
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
server/accounts/graphql/: queries.py  types.py
server/boards/: models.py
server/boards/graphql/: mutations.py  queries.py  types.py
server/boards/migrations/: 0001_initial.py  0002_alter_board_creator.py
server/categories/: models.py
server/categories/graphql/: mutations.py  queries.py  types.py
server/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
server/commons/: models.py  types.py  utils.py
server/config/: asgi.py  settings.py  wsgi.py
server/deployment/: Dockerfile  entrypoint.sh
server/deployment/dev/: .dockerignore  Dockerfile  fly.toml
server/deployment/local/: docker-compose.yml
server/issues/: admin.py  urls.py
server/issues/graphql/: mutations.py  queries.py  types.py
server/issues/migrations/: 0001_initial.py  0002_alter_issue_board_alter_issue_category_and_more.py  0002_alter_issue_type.py  0003_delete_subissue.py  0004_alter_issue_assignee_alter_issue_category_and_more.py
server/issues/models/: __init__.py  issue.py  subissue.py
server/server/: schema.py  settings.py  urls.py
(+44 files in other folders)
