[tool.black]
line-length = 120

[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend server for habit-tracker project"
authors = ["Michał Droś <michal.dros01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
Django = "^4.2.4"
django-environ = "^0.10.0"
django-extensions = "^3.2.3"
django-graphql-jwt = "^0.4.0"
graphene = "^3.3"
graphene-django = "^3.1.5"
python = "^3.11"
psycopg2 = "^2.9.7"
black = "^23.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
